recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:7: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
	if(levels%2=0){
                 ^